Migrated to Java 21 - fixed code smells